--- a/1012_1/WebContent/request2.html
+++ b/1012_1/WebContent/request2.html
@@ -5,7 +5,7 @@
 <title>Get 메서드를 이용한 파라미터 전송</title>
 </head>
 <body>
-    <form action="request2.jsp" method="get">
+    <form action="request2.jsp" method="post">
         
         <input type="text" name="kor" id="kor">
         <input type="text" name="math" id="math">
